# yaml-playwright-automation

./: .gitignore  DESIGN.md  README.md  pyproject.toml
src/: __init__.py  browser_pool.py  cli.py  data_store.py  flow_runner.py  parser.py  scheduler.py  task_executor.py
src/actions/: __init__.py  navigation.py
workflows/examples/: batch_extract.yaml  login_demo.yaml
